gen/littleDuckParser.py
# Generated from /Users/paulinacovarrubias/Documents/compilador_LittleDuck/littleDuck.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class littleDuckParser ( Parser ):

    grammarFileName = "littleDuck.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'int'", "'float'", "'var'", "'print'", "'while'", 
                     "'do'", "'if'", "'else'", "'void'", "'program'", "'main'", 
                     "'end'", "','", "';'", "':'", "'='", "'+'", "'-'", 
                     "'*'", "'/'", "'<'", "'>'", "'!='", "'=='", "')'", 
                     "'('", "'}'", "'{'", "']'", "'['" ]

    symbolicNames = [ "<INVALID>", "CTE_STRING", "CTE_INT", "CTE_FLOAT", 
                      "T_INT", "T_FLOAT", "VAR", "PRINT", "WHILE", "DO", 
                      "IF", "ELSE", "VOID", "PROGRAM", "MAIN", "END", "COMMA", 
                      "SEMICOLON", "COLON", "ASSIGN", "PLUS", "MINUS", "MULTIPLY", 
                      "DIVIDE", "LESS", "GREATER", "NOT_EQUAL", "EQUAL", 
                      "R_PAREN", "L_PAREN", "R_KEY", "L_KEY", "R_BRACKET", 
                      "L_BRACKET", "ID", "IGNORE" ]

    RULE_program = 0
    RULE_body = 1
    RULE_type = 2
    RULE_vars = 3
    RULE_inner_funcs = 4
    RULE_funcs = 5
    RULE_statement = 6
    RULE_expression_multiple = 7
    RULE_assignment = 8
    RULE_condition = 9
    RULE_cycle = 10
    RULE_f_call = 11
    RULE_print = 12
    RULE_expression = 13
    RULE_exp = 14
    RULE_term = 15
    RULE_num_construct = 16
    RULE_factor = 17

    ruleNames =  [ "program", "body", "type", "vars", "inner_funcs", "funcs", 
                   "statement", "expression_multiple", "assignment", "condition", 
                   "cycle", "f_call", "print", "expression", "exp", "term", 
                   "num_construct", "factor" ]

    EOF = Token.EOF
    CTE_STRING=1
    CTE_INT=2
    CTE_FLOAT=3
    T_INT=4
    T_FLOAT=5
    VAR=6
    PRINT=7
    WHILE=8
    DO=9
    IF=10
    ELSE=11
    VOID=12
    PROGRAM=13
    MAIN=14
    END=15
    COMMA=16
    SEMICOLON=17
    COLON=18
    ASSIGN=19
    PLUS=20
    MINUS=21
    MULTIPLY=22
    DIVIDE=23
    LESS=24
    GREATER=25
    NOT_EQUAL=26
    EQUAL=27
    R_PAREN=28
    L_PAREN=29
    R_KEY=30
    L_KEY=31
    R_BRACKET=32
    L_BRACKET=33
    ID=34
    IGNORE=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(littleDuckParser.PROGRAM, 0)

        def ID(self):
            return self.getToken(littleDuckParser.ID, 0)

        def SEMICOLON(self):
            return self.getToken(littleDuckParser.SEMICOLON, 0)

        def MAIN(self):
            return self.getToken(littleDuckParser.MAIN, 0)

        def body(self):
            return self.getTypedRuleContext(littleDuckParser.BodyContext,0)


        def END(self):
            return self.getToken(littleDuckParser.END, 0)

        def vars_(self):
            return self.getTypedRuleContext(littleDuckParser.VarsContext,0)


        def funcs(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(littleDuckParser.FuncsContext)
            else:
                return self.getTypedRuleContext(littleDuckParser.FuncsContext,i)


        def getRuleIndex(self):
            return littleDuckParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = littleDuckParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(littleDuckParser.PROGRAM)
            self.state = 37
            self.match(littleDuckParser.ID)
            self.state = 38
            self.match(littleDuckParser.SEMICOLON)
            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 39
                self.vars_()


            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==12:
                self.state = 42
                self.funcs()
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 48
            self.match(littleDuckParser.MAIN)
            self.state = 49
            self.body()
            self.state = 50
            self.match(littleDuckParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def L_KEY(self):
            return self.getToken(littleDuckParser.L_KEY, 0)

        def R_KEY(self):
            return self.getToken(littleDuckParser.R_KEY, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(littleDuckParser.StatementContext)
            else:
                return self.getTypedRuleContext(littleDuckParser.StatementContext,i)


        def getRuleIndex(self):
            return littleDuckParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = littleDuckParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(littleDuckParser.L_KEY)
            self.state = 54 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 53
                self.statement()
                self.state = 56 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 17179870592) != 0)):
                    break

            self.state = 58
            self.match(littleDuckParser.R_KEY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def T_INT(self):
            return self.getToken(littleDuckParser.T_INT, 0)

        def T_FLOAT(self):
            return self.getToken(littleDuckParser.T_FLOAT, 0)

        def getRuleIndex(self):
            return littleDuckParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = littleDuckParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            _la = self._input.LA(1)
            if not(_la==4 or _la==5):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(littleDuckParser.VAR, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(littleDuckParser.ID)
            else:
                return self.getToken(littleDuckParser.ID, i)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(littleDuckParser.COLON)
            else:
                return self.getToken(littleDuckParser.COLON, i)

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(littleDuckParser.TypeContext)
            else:
                return self.getTypedRuleContext(littleDuckParser.TypeContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(littleDuckParser.SEMICOLON)
            else:
                return self.getToken(littleDuckParser.SEMICOLON, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(littleDuckParser.COMMA)
            else:
                return self.getToken(littleDuckParser.COMMA, i)

        def getRuleIndex(self):
            return littleDuckParser.RULE_vars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars" ):
                listener.enterVars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars" ):
                listener.exitVars(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVars" ):
                return visitor.visitVars(self)
            else:
                return visitor.visitChildren(self)




    def vars_(self):

        localctx = littleDuckParser.VarsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vars)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(littleDuckParser.VAR)
            self.state = 75 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 63
                self.match(littleDuckParser.ID)
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==16:
                    self.state = 64
                    self.match(littleDuckParser.COMMA)
                    self.state = 65
                    self.match(littleDuckParser.ID)
                    self.state = 70
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 71
                self.match(littleDuckParser.COLON)
                self.state = 72
                self.type_()
                self.state = 73
                self.match(littleDuckParser.SEMICOLON)
                self.state = 77 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==34):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Inner_funcsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(littleDuckParser.ID)
            else:
                return self.getToken(littleDuckParser.ID, i)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(littleDuckParser.COLON)
            else:
                return self.getToken(littleDuckParser.COLON, i)

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(littleDuckParser.TypeContext)
            else:
                return self.getTypedRuleContext(littleDuckParser.TypeContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(littleDuckParser.COMMA)
            else:
                return self.getToken(littleDuckParser.COMMA, i)

        def getRuleIndex(self):
            return littleDuckParser.RULE_inner_funcs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInner_funcs" ):
                listener.enterInner_funcs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInner_funcs" ):
                listener.exitInner_funcs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInner_funcs" ):
                return visitor.visitInner_funcs(self)
            else:
                return visitor.visitChildren(self)




    def inner_funcs(self):

        localctx = littleDuckParser.Inner_funcsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_inner_funcs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(littleDuckParser.ID)
            self.state = 80
            self.match(littleDuckParser.COLON)
            self.state = 81
            self.type_()
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==16:
                self.state = 82
                self.match(littleDuckParser.COMMA)
                self.state = 83
                self.match(littleDuckParser.ID)
                self.state = 84
                self.match(littleDuckParser.COLON)
                self.state = 85
                self.type_()
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VOID(self):
            return self.getToken(littleDuckParser.VOID, 0)

        def ID(self):
            return self.getToken(littleDuckParser.ID, 0)

        def L_PAREN(self):
            return self.getToken(littleDuckParser.L_PAREN, 0)

        def R_PAREN(self):
            return self.getToken(littleDuckParser.R_PAREN, 0)

        def L_BRACKET(self):
            return self.getToken(littleDuckParser.L_BRACKET, 0)

        def vars_(self):
            return self.getTypedRuleContext(littleDuckParser.VarsContext,0)


        def body(self):
            return self.getTypedRuleContext(littleDuckParser.BodyContext,0)


        def R_BRACKET(self):
            return self.getToken(littleDuckParser.R_BRACKET, 0)

        def SEMICOLON(self):
            return self.getToken(littleDuckParser.SEMICOLON, 0)

        def inner_funcs(self):
            return self.getTypedRuleContext(littleDuckParser.Inner_funcsContext,0)


        def getRuleIndex(self):
            return littleDuckParser.RULE_funcs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncs" ):
                listener.enterFuncs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncs" ):
                listener.exitFuncs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncs" ):
                return visitor.visitFuncs(self)
            else:
                return visitor.visitChildren(self)




    def funcs(self):

        localctx = littleDuckParser.FuncsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funcs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(littleDuckParser.VOID)
            self.state = 92
            self.match(littleDuckParser.ID)
            self.state = 93
            self.match(littleDuckParser.L_PAREN)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==34:
                self.state = 94
                self.inner_funcs()


            self.state = 97
            self.match(littleDuckParser.R_PAREN)
            self.state = 98
            self.match(littleDuckParser.L_BRACKET)
            self.state = 99
            self.vars_()
            self.state = 100
            self.body()
            self.state = 101
            self.match(littleDuckParser.R_BRACKET)
            self.state = 102
            self.match(littleDuckParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(littleDuckParser.AssignmentContext,0)


        def condition(self):
            return self.getTypedRuleContext(littleDuckParser.ConditionContext,0)


        def cycle(self):
            return self.getTypedRuleContext(littleDuckParser.CycleContext,0)


        def f_call(self):
            return self.getTypedRuleContext(littleDuckParser.F_callContext,0)


        def print_(self):
            return self.getTypedRuleContext(littleDuckParser.PrintContext,0)


        def getRuleIndex(self):
            return littleDuckParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = littleDuckParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_statement)
        try:
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.condition()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 106
                self.cycle()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 107
                self.f_call()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 108
                self.print_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression_multipleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(littleDuckParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(littleDuckParser.ExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(littleDuckParser.COMMA)
            else:
                return self.getToken(littleDuckParser.COMMA, i)

        def getRuleIndex(self):
            return littleDuckParser.RULE_expression_multiple

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression_multiple" ):
                listener.enterExpression_multiple(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression_multiple" ):
                listener.exitExpression_multiple(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression_multiple" ):
                return visitor.visitExpression_multiple(self)
            else:
                return visitor.visitChildren(self)




    def expression_multiple(self):

        localctx = littleDuckParser.Expression_multipleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expression_multiple)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.expression()
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==16:
                self.state = 112
                self.match(littleDuckParser.COMMA)
                self.state = 113
                self.expression()
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(littleDuckParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(littleDuckParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(littleDuckParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(littleDuckParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return littleDuckParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = littleDuckParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(littleDuckParser.ID)
            self.state = 120
            self.match(littleDuckParser.ASSIGN)
            self.state = 121
            self.expression()
            self.state = 122
            self.match(littleDuckParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(littleDuckParser.IF, 0)

        def L_PAREN(self):
            return self.getToken(littleDuckParser.L_PAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(littleDuckParser.ExpressionContext,0)


        def R_PAREN(self):
            return self.getToken(littleDuckParser.R_PAREN, 0)

        def body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(littleDuckParser.BodyContext)
            else:
                return self.getTypedRuleContext(littleDuckParser.BodyContext,i)


        def SEMICOLON(self):
            return self.getToken(littleDuckParser.SEMICOLON, 0)

        def ELSE(self):
            return self.getToken(littleDuckParser.ELSE, 0)

        def getRuleIndex(self):
            return littleDuckParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = littleDuckParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_condition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(littleDuckParser.IF)
            self.state = 125
            self.match(littleDuckParser.L_PAREN)
            self.state = 126
            self.expression()
            self.state = 127
            self.match(littleDuckParser.R_PAREN)
            self.state = 128
            self.body()
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 129
                self.match(littleDuckParser.ELSE)
                self.state = 130
                self.body()


            self.state = 133
            self.match(littleDuckParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CycleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(littleDuckParser.WHILE, 0)

        def L_PAREN(self):
            return self.getToken(littleDuckParser.L_PAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(littleDuckParser.ExpressionContext,0)


        def R_PAREN(self):
            return self.getToken(littleDuckParser.R_PAREN, 0)

        def DO(self):
            return self.getToken(littleDuckParser.DO, 0)

        def body(self):
            return self.getTypedRuleContext(littleDuckParser.BodyContext,0)


        def SEMICOLON(self):
            return self.getToken(littleDuckParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return littleDuckParser.RULE_cycle

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCycle" ):
                listener.enterCycle(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCycle" ):
                listener.exitCycle(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCycle" ):
                return visitor.visitCycle(self)
            else:
                return visitor.visitChildren(self)




    def cycle(self):

        localctx = littleDuckParser.CycleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_cycle)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(littleDuckParser.WHILE)
            self.state = 136
            self.match(littleDuckParser.L_PAREN)
            self.state = 137
            self.expression()
            self.state = 138
            self.match(littleDuckParser.R_PAREN)
            self.state = 139
            self.match(littleDuckParser.DO)
            self.state = 140
            self.body()
            self.state = 141
            self.match(littleDuckParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class F_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(littleDuckParser.ID, 0)

        def L_PAREN(self):
            return self.getToken(littleDuckParser.L_PAREN, 0)

        def R_PAREN(self):
            return self.getToken(littleDuckParser.R_PAREN, 0)

        def SEMICOLON(self):
            return self.getToken(littleDuckParser.SEMICOLON, 0)

        def expression_multiple(self):
            return self.getTypedRuleContext(littleDuckParser.Expression_multipleContext,0)


        def getRuleIndex(self):
            return littleDuckParser.RULE_f_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterF_call" ):
                listener.enterF_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitF_call" ):
                listener.exitF_call(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitF_call" ):
                return visitor.visitF_call(self)
            else:
                return visitor.visitChildren(self)




    def f_call(self):

        localctx = littleDuckParser.F_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_f_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(littleDuckParser.ID)
            self.state = 144
            self.match(littleDuckParser.L_PAREN)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 17719885836) != 0):
                self.state = 145
                self.expression_multiple()


            self.state = 148
            self.match(littleDuckParser.R_PAREN)
            self.state = 149
            self.match(littleDuckParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(littleDuckParser.PRINT, 0)

        def L_PAREN(self):
            return self.getToken(littleDuckParser.L_PAREN, 0)

        def R_PAREN(self):
            return self.getToken(littleDuckParser.R_PAREN, 0)

        def SEMICOLON(self):
            return self.getToken(littleDuckParser.SEMICOLON, 0)

        def CTE_STRING(self, i:int=None):
            if i is None:
                return self.getTokens(littleDuckParser.CTE_STRING)
            else:
                return self.getToken(littleDuckParser.CTE_STRING, i)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(littleDuckParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(littleDuckParser.ExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(littleDuckParser.COMMA)
            else:
                return self.getToken(littleDuckParser.COMMA, i)

        def getRuleIndex(self):
            return littleDuckParser.RULE_print

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint" ):
                listener.enterPrint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint" ):
                listener.exitPrint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint" ):
                return visitor.visitPrint(self)
            else:
                return visitor.visitChildren(self)




    def print_(self):
